@@ -1,8 +1,7 @@
 package seedu.address.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static seedu.address.logic.Messages.MESSAGE_PERSONS_LISTED_OVERVIEW;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
 import static seedu.address.testutil.TypicalPersons.ALICE;
@@ -13,90 +12,58 @@ import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import seedu.address.model.FilterDetails;
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
-import seedu.address.model.person.NameContainsKeywordsPredicate;
 import seedu.address.model.person.PersonMatchesDetailsPredicate;
 
 /**
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
  */
 public class FindCommandTest {
-    private Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
-    private Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
 
     @Test
     public void equals() {
-        NameContainsKeywordsPredicate firstPredicate =
-                new NameContainsKeywordsPredicate(Collections.singletonList("first"));
-        NameContainsKeywordsPredicate secondPredicate =
-                new NameContainsKeywordsPredicate(Collections.singletonList("second"));
+        FilterDetails firstFilterDetails = createEmptyFilterDetails();
+        firstFilterDetails.setNameKeywords(Set.of("first"));
+        FilterDetails secondFilterDetails = createEmptyFilterDetails();
+        secondFilterDetails.setNameKeywords(Set.of("second"));
 
-        FindCommand findFirstCommand = new FindCommand(firstPredicate);
-        FindCommand findSecondCommand = new FindCommand(secondPredicate);
+        FindCommand findFirstCommand = new FindCommand(firstFilterDetails);
+        FindCommand findSecondCommand = new FindCommand(secondFilterDetails);
 
         // same object -> returns true
-        assertTrue(findFirstCommand.equals(findFirstCommand));
+        assertEquals(findFirstCommand, findFirstCommand);
 
         // same values -> returns true
-        FindCommand findFirstCommandCopy = new FindCommand(firstPredicate);
-        assertTrue(findFirstCommand.equals(findFirstCommandCopy));
+        FindCommand findFirstCommandCopy = new FindCommand(firstFilterDetails);
+        assertEquals(findFirstCommand, findFirstCommandCopy);
 
         // different types -> returns false
-        assertFalse(findFirstCommand.equals(1));
+        assertNotEquals(1, findFirstCommand);
 
         // null -> returns false
-        assertFalse(findFirstCommand.equals(null));
+        assertNotEquals(null, findFirstCommand);
 
         // different person -> returns false
-        assertFalse(findFirstCommand.equals(findSecondCommand));
-
-        // Test PersonMatchesDetailsPredicate
-        FilterDetails filterDetails1 = createEmptyFilterDetails();
-        filterDetails1.setNameKeywords(Set.of("first"));
-        PersonMatchesDetailsPredicate firstDetailsPredicate = new PersonMatchesDetailsPredicate(filterDetails1);
-
-        FilterDetails filterDetails2 = createEmptyFilterDetails();
-        filterDetails2.setNameKeywords(Set.of("second"));
-        PersonMatchesDetailsPredicate secondDetailsPredicate = new PersonMatchesDetailsPredicate(filterDetails2);
-
-        FindCommand findFirstDetailsCommand = new FindCommand(firstDetailsPredicate);
-        FindCommand findSecondDetailsCommand = new FindCommand(secondDetailsPredicate);
-
-        // same values -> returns true
-        FindCommand findFirstDetailsCommandCopy = new FindCommand(firstDetailsPredicate);
-        assertTrue(findFirstDetailsCommand.equals(findFirstDetailsCommandCopy));
-
-        // different values -> returns false
-        assertFalse(findFirstDetailsCommand.equals(findSecondDetailsCommand));
-
-        // different predicate type -> returns false
-        assertFalse(findFirstCommand.equals(findFirstDetailsCommand));
-    }
-
-    @Disabled("Disabled until FindCommand can handle empty keyword input")
-    @Test()
-    public void execute_zeroKeywords_noPersonFound() {
-        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0);
-        NameContainsKeywordsPredicate predicate = preparePredicate(" ");
-        FindCommand command = new FindCommand(predicate);
-        expectedModel.updateFilteredPersonList(predicate);
-        assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Collections.emptyList(), model.getFilteredPersonList());
+        assertNotEquals(findFirstCommand, findSecondCommand);
     }
 
     @Test
     public void execute_multipleKeywords_multiplePersonsFound() {
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3);
-        NameContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
-        FindCommand command = new FindCommand(predicate);
+        FilterDetails filterDetails = createEmptyFilterDetails();
+        filterDetails.setNameKeywords(Set.of("Kurz", "Elle", "Kunz"));
+        PersonMatchesDetailsPredicate predicate = new PersonMatchesDetailsPredicate(filterDetails);
+        FindCommand command = new FindCommand(filterDetails);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredPersonList());
@@ -108,10 +75,10 @@ public class FindCommandTest {
         FilterDetails filterDetails = createEmptyFilterDetails();
         filterDetails.setPhoneNumberKeywords(Set.of("94351253")); // ALICE's phone
         PersonMatchesDetailsPredicate predicate = new PersonMatchesDetailsPredicate(filterDetails);
-        FindCommand command = new FindCommand(predicate);
+        FindCommand command = new FindCommand(filterDetails);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(ALICE), model.getFilteredPersonList());
+        assertEquals(Collections.singletonList(ALICE), model.getFilteredPersonList());
     }
 
     @Test
@@ -122,7 +89,7 @@ public class FindCommandTest {
         FilterDetails filterDetails = createEmptyFilterDetails();
         filterDetails.setTagGenderKeywords(Set.of("Female"));
         PersonMatchesDetailsPredicate predicate = new PersonMatchesDetailsPredicate(filterDetails);
-        FindCommand command = new FindCommand(predicate);
+        FindCommand command = new FindCommand(filterDetails);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Arrays.asList(ALICE, ELLE, FIONA), model.getFilteredPersonList());
@@ -136,10 +103,10 @@ public class FindCommandTest {
         filterDetails.setTagGenderKeywords(Set.of("Male"));
         filterDetails.setTagYearKeywords(Set.of("4"));
         PersonMatchesDetailsPredicate predicate = new PersonMatchesDetailsPredicate(filterDetails);
-        FindCommand command = new FindCommand(predicate);
+        FindCommand command = new FindCommand(filterDetails);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(), model.getFilteredPersonList());
+        assertEquals(List.of(), model.getFilteredPersonList());
     }
 
 
@@ -151,32 +118,21 @@ public class FindCommandTest {
         filterDetails.setNameKeywords(Set.of("Alice"));
         filterDetails.setPhoneNumberKeywords(Set.of("94351253"));
         PersonMatchesDetailsPredicate predicate = new PersonMatchesDetailsPredicate(filterDetails);
-        FindCommand command = new FindCommand(predicate);
+        FindCommand command = new FindCommand(filterDetails);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(ALICE), model.getFilteredPersonList());
+        assertEquals(Collections.singletonList(ALICE), model.getFilteredPersonList());
     }
 
     @Test
     public void toStringMethod() {
-        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(Arrays.asList("keyword"));
-        FindCommand findCommand = new FindCommand(predicate);
-        String expected = FindCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
-        assertEquals(expected, findCommand.toString());
-
         FilterDetails filterDetails = createEmptyFilterDetails();
+        FindCommand findDetailsCommand = new FindCommand(filterDetails);
         PersonMatchesDetailsPredicate detailsPredicate = new PersonMatchesDetailsPredicate(filterDetails);
-        FindCommand findDetailsCommand = new FindCommand(detailsPredicate);
         String expectedDetails = FindCommand.class.getCanonicalName() + "{predicate=" + detailsPredicate + "}";
         assertEquals(expectedDetails, findDetailsCommand.toString());
     }
 
-    /**
-     * Parses {@code userInput} into a {@code NameContainsKeywordsPredicate}.
-     */
-    private NameContainsKeywordsPredicate preparePredicate(String userInput) {
-        return new NameContainsKeywordsPredicate(Arrays.asList(userInput.split("\\s+")));
-    }
 
     private FilterDetails createEmptyFilterDetails() {
         FilterDetails filterDetails = new FilterDetails();
